  ConfigurationDefaultingModule.getConfigurationDefaults(). Such defaults
  override those in the config classes but are themselves overridden by
  Bootstrap.withApplicationDefaults().

* Discovery read timeout

  We reduced the discovery client's default read timeout to 5 seconds. This
  is to avoid announcements timing out of Discovery when one or more
  Discovery servers hang.

* Node ID logged on startup

* [Bug] HttpClient metric names now start with "HttpClient" instead of
  "AsyncHttpClient".

Platform 1.07

* AbstractConfigurationAwareModule

  Extending this module makes it easy to access configuration at binding time,
  which allows conditionally installing modules or bindings based on config.

* Library upgrades

  - Jetty to 9.2.3
  - slf4j to 1.7.7
  - logback to 1.1.2
  - Jackson to 2.4.3
  - Jersey to 2.13
  - Joda-time to 2.5
  - Mockito to 1.10.8
  - cglib to 3.1

Platform 1.06

* SSLv3 disabled in both http-client and http-server

* AutoValue support

  The libarary pom now specifies a version and excludes for Google AutoValue.
  Google AutoValue <https://github.com/google/auto/tree/master/value> simplifies
  the creation of immutable value classes.

  The sample server has been updated to demonstrate AutoValue.

* Smile support in http-client

  We added SmileBodyMapper, SmileResponseHandler, and
  FullSmileResponseHandler classes to the http-client sub-project.

* SetThreadName

  The SetThreadName class takes advantage of try-with-resources to safely rename a
  thread and restore its original name when it goes out of scope.

  Here's a usage example:

      try (SetThreadName ignored = new SetThreadName("query-%s", queryId)) {
          ...
      }

* Rack moved to separate project

  We moved the rack packaging support into the platform-rack project.

* We changed the Logger API to work directly against Java's built-in logging APIs.

* HttpClient

  - Name and group Jetty HTTP client threads
  - Always use daemon threads in HTTP client