@@ -55,7 +55,7 @@ public class TestHttpServerConfig
                 .setAdminMinThreads(2)
                 .setAdminMaxThreads(200)
                 .setMaxRequestHeaderSize(null)
-                .setShowStackTrace(true)
+                .setShowStackTrace(false)
         );
     }
  
@@ -83,7 +83,7 @@ public class TestHttpServerConfig
                 .put("http-server.admin.threads.min", "3")
                 .put("http-server.admin.threads.max", "4")
                 .put("http-server.max-request-header-size", "32kB")
-                .put("http-server.show-stack-trace", "false")
+                .put("http-server.show-stack-trace", "true")
                 .build();
 
         HttpServerConfig expected = new HttpServerConfig()
@@ -107,7 +107,7 @@ public class TestHttpServerConfig
                 .setAdminPort(3)
                 .setAdminMinThreads(3)
                 .setAdminMaxThreads(4)
-                .setShowStackTrace(false);
+                .setShowStackTrace(true);
 
         assertFullMapping(properties, expected);
     }
